--- a/extension/popup.html
+++ b/extension/popup.html
@@ -250,7 +250,7 @@
     </button>
 
     <button class="button secondary" id="emulateMobileBtn">
-      📱 Emulate Mobile (Auto)
+      🔄 Reload với Mobile UA
     </button>
 
     <button class="button secondary" id="configBtn">
@@ -287,11 +287,11 @@
     <div class="info">
       📌 <strong>Hướng dẫn:</strong><br>
       1. Mở trang thanh toán MoMo<br>
-      2. Extension tự động emulate mobile<br>
+      2. Extension tự động gửi Mobile User-Agent<br>
       3. Click "Trích xuất thông tin"<br>
       4. App sẽ tự động mở với deep links
       <br><br>
-      💡 <strong>Emulate Mobile:</strong> Tự động giả lập thiết bị di động bằng Chrome DevTools Protocol (CDP) - không cần bật Device Mode thủ công!
+      💡 <strong>Mobile UA:</strong> Tự động áp dụng Mobile User-Agent cho mọi request đến MoMo (DeclarativeNetRequest API)
     </div>
 
     <div class="footer">
