Implement conditional Mobile UA - default desktop, auto-enable for mobile users
## Changes from Always-On to Conditional

### Problem
Previous approach: Always apply mobile UA for ALL users (desktop + mobile)
→ Desktop users see mobile version unnecessarily

### Solution
Default: Desktop UA (no modification)
Mobile users: Auto-detect and enable mobile UA
Manual override: Toggle button in extension

## Implementation

### 1. Dynamic Rules (not static)
- manifest.json: declarative_net_request with EMPTY rule_resources
- Rules are added/removed dynamically via updateDynamicRules API
- Default state: NO rules = desktop UA

### 2. Background.js - Dynamic Rule Management
- enableMobileRules(): Add mobile UA rules dynamically
- disableMobileRules(): Remove all rules
- checkMobileRules(): Check current status
- DEVICE_INFO_UPDATE: Receive device type from React app

### 3. React App - Auto Device Detection
- QRPage.js: Detect device type on mount and resize
- Send DEVICE_INFO_UPDATE to extension
- Extension auto-enables mobile UA if isMobile=true

### 4. Popup UI - Manual Toggle
- Button text: "Bật Mobile UA" / "Tắt Mobile UA"
- Click to toggle rules on/off
- Auto-update button text based on current state
- Reload tab after toggle to apply changes

## User Flows

### Desktop User
1. Open MoMo page → sees DESKTOP version ✅
2. Extension does nothing (no rules)
3. Manual override: Click "Bật Mobile UA" if needed

### Mobile User
1. Open React app → detect mobile device
2. React sends DEVICE_INFO_UPDATE to extension
3. Extension auto-enables mobile UA rules
4. Open MoMo page → sees MOBILE version ✅

### Manual Control
1. Open extension popup
2. Click "Bật/Tắt Mobile UA" to toggle
3. Tab reloads with new UA

## Benefits
- ✅ Desktop users get desktop experience by default
- ✅ Mobile users get mobile experience automatically
- ✅ Manual override always available
- ✅ Clean conditional logic
- ✅ No unnecessary UA modification

Perfect!

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -250,7 +250,7 @@
     </button>
 
     <button class="button secondary" id="emulateMobileBtn">
-      🔄 Reload với Mobile UA
+      📱 Bật Mobile UA
     </button>
 
     <button class="button secondary" id="configBtn">
@@ -291,7 +291,7 @@
       3. Click "Trích xuất thông tin"<br>
       4. App sẽ tự động mở với deep links
       <br><br>
-      💡 <strong>Mobile UA:</strong> Tự động áp dụng Mobile User-Agent cho mọi request đến MoMo (DeclarativeNetRequest API)
+      💡 <strong>Mobile UA:</strong> Mặc định dùng Desktop UA. Click "Bật Mobile UA" để chuyển sang Mobile (hoặc extension tự động khi detect mobile device từ React app)
     </div>
 
     <div class="footer">
