Implement 100% automatic extraction - no manual clicks needed
## Full Automation Flow

### Before (Manual)
1. Open MoMo page
2. Wait for page to load
3. Click extension icon
4. Click 'Trích xuất thông tin' button
5. React app opens
→ 5 steps, frustrating for users

### After (100% Automatic)
1. Open MoMo page
→ Done! Everything happens automatically
  - Auto-detect device type
  - Auto-enable mobile UA if needed
  - Auto-extract payment data (3s delay)
  - Auto-send to WebSocket server
  - Auto-open React app
  - Auto-start countdown observer
  - Auto-update every 5s

## Implementation

### content.js - autoExtractAndSend()
- Triggers 3 seconds after mobile page loads
- Prevents duplicate extraction (10s cooldown)
- Generates token automatically
- Extracts and sends data
- Shows success notification
- Opens React app automatically
- Starts countdown monitoring

### background.js - New Message Handlers
- SHOW_NOTIFICATION: Display notifications from content script
- AUTO_OPEN_REACT_APP: Smart open (check if already open)
- Only opens if React app not already running

### popup.html - Updated Instructions
- Clear messaging: '100% automatic'
- No need to click anything
- Manual buttons still available for override

## Benefits
- ✅ Zero clicks required
- ✅ Perfect UX - seamless experience
- ✅ Smart duplicate prevention
- ✅ Auto-refresh data every 5s
- ✅ React app opens automatically
- ✅ Works on both mobile and desktop

## Edge Cases Handled
- Duplicate extraction prevention (10s cooldown)
- Check if React app already open (no duplicate tabs)
- Mobile UA auto-enable with reload
- Proper sequencing with delays

Perfect automation! 🚀

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -285,13 +285,15 @@
     </div>
 
     <div class="info">
-      📌 <strong>Hướng dẫn:</strong><br>
+      📌 <strong>Tự động hóa 100%:</strong><br>
       1. Mở trang thanh toán MoMo<br>
-      2. Extension tự động gửi Mobile User-Agent<br>
-      3. Click "Trích xuất thông tin"<br>
-      4. App sẽ tự động mở với deep links
+      2. Extension tự động detect device<br>
+      3. Tự động extract thông tin<br>
+      4. Tự động mở React App với data
       <br><br>
-      💡 <strong>Mobile UA:</strong> Mặc định dùng Desktop UA. Click "Bật Mobile UA" để chuyển sang Mobile (hoặc extension tự động khi detect mobile device từ React app)
+      💡 <strong>Không cần click gì cả!</strong> Extension sẽ tự động làm mọi thứ.
+      <br><br>
+      🔧 <strong>Manual:</strong> Có thể dùng các nút bên trên nếu cần override thủ công
     </div>
 
     <div class="footer">
